make sure watermark is visible on transitional forms

--- a/src/hostedPages/activities/form/form.module.scss
+++ b/src/hostedPages/activities/form/form.module.scss
@@ -91,7 +91,7 @@
   }
 
   &.traditional {
-    padding-bottom: var(--awell-spacing-6);
+    padding-bottom: var(--spacing-18)
   }
   &.conversational {
     padding-top: var(--awell-spacing-4);
@@ -104,8 +104,8 @@
   bottom: 50px;
   left: 0;
   width: 100%;
-  height: 70px;
-  background: linear-gradient(to bottom, transparent, var(--awell-neutralLight10) 100%);
+  height: 50px;
+  background: linear-gradient(to bottom, transparent, var(--awell-neutralLight10) 50%);
   pointer-events: none; /* Prevent interaction */
   transition: top 0.5s ease-in-out;
 }
